--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h>This is a heading</h>
     <p> this is  paragraph and some infor text</p>
     <p> this is also a paragraph with some other text</p>
+
+    <h1>Testing home page on netlify</h1>
 </body>
 </html>
