--- a/index.html
+++ b/index.html
@@ -7,10 +7,86 @@
     <title>Document</title>
 </head>
 <body>
-    <h>This is a heading</h>
-    <p> this is  paragraph and some infor text</p>
-    <p> this is also a paragraph with some other text</p>
+    <header>
+        <a href="index.html" class="logo"> Rainy Days</a>
+        <nav>
+            <a href="index.html" class="current"> Home</a>
+            <a href="jackets.html"> Jackets</a>  
+            <a href="about.html"> About</a>
+            <a href="cart.html"> Shopping Cart</a>   
 
-    <h1>Testing home page on netlify</h1>
+        </nav>
+
+    </header>
+    <main>
+        <section class="Hero Section">
+            <h1>Pushing the comfort zone</h1>
+            <a href="jackets.html" class="cta"> View our jackets</a>  
+        </section>
+        <section class="products">
+            <div class="div block one">
+                <h2>Jackets for him and her</h2>
+                <h3>Rainy Days are designed for a range of different outdoor activities that enriches people's lives.</h3>
+                <a href="jackets.html" class="cta"> View our jackets</a>
+            </div>
+            <div>
+                <img src="images/RainyDays_Jacket1.png" alt="first watch jacket orange" />
+                <h4>Name of product</h4>
+                <p>Type of product</p>
+            </div>
+            <div>
+                <img src="Images/RainyDays_Jacket2.png" alt="Scott jacket dark grey" />
+                <h4>Name of product</h4>
+                <p>Type of product</p>
+            </div>
+            <div>
+                <img src="Images/RainyDays_Jacket3.png" alt="Red bike jacket" />
+                <h4>Name of product</h4>
+                <p>Type of product</p>
+            </div>
+            <div>
+                <img src="Images/RainyDays_Jacket7.png" alt="Patagonia fleece green" />
+                <h4>Name of product</h4>
+                <p>Type of product</p>
+            </div>
+        </section>
+        <section class="type og jackets">
+            <div>
+                <img src="Images/ali-kazal-OsMWWAL0saQ-unsplash kopi.jpg" alt="woman stadning gazing out the horizon">
+                <h1 class="heading on image"> Woman's jackets</h1>
+            </div>
+            <div>
+                <img src="Images/patrick-hendry-PQa5vHHnpm4-unsplash kopi.jpg" alt="Man walking in red jacket">
+                <h1 class="heading on image"> Men's Jackets</h1>
+            </div>
+        </section>
+        <section class="intro--days">
+            <div>
+                <h1>Rainy Days was established in 1998</h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud </p>
+                <a href="about.html" class="cta white"> Read more</a>
+            </div>
+            <div>
+                <img src="images/illustration.png">
+            </div>
+        </section>
+
+
+
+    </main>
+    <footer>
+        <Section class="footer section">
+            <div>
+                <h2>Pushing the comfort zone</h2>
+            </div>
+            <div>
+                <img src="Images/R_logo_02.png">
+                <p>Adress road 1, 000 OSLO</p>
+                <p>service@rainydays.com</p>
+            </div>
+
+        </Section>
+    </footer>
+
 </body>
 </html>
